--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Home</title>
+	<meta charset="utf-8">
+	<meta name="author" content="Kodinger">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>Home Page</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="static/css/my-login.css">
+
     <style>
-        body {
-            background-color: #32afd8; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        
-        
         .button-container {
             display: flex;
             justify-content: center;
@@ -20,7 +16,7 @@
         }
 
         .button-container button {
-            background-color: #2a2a84; 
+            background-color: #109393; 
             color: #FFFFFF; 
             width: 300px; 
             height: 300px; 
@@ -43,10 +39,32 @@
     }
     </style>
 </head>
-<body>
-    <div class="button-container">
-        <a href="{{ url_for('dashboards') }}"><button>Dashboards</button></a>
-        <a href="{{ url_for('predictions') }}"><button>Predictions</button></a>
-    </div>
+
+<body class="my-login-page">
+	<section class="h-100">
+		<div class="container h-100">
+			<div class="row justify-content-md-center h-100">
+				<div class="card-wrapper">
+					<div class="brand">
+						<img src="static/img/inetum2.jpg" alt="logo">
+					</div>
+					<div class="card-body">
+                                <div class="button-container">
+                                    <a href="{{ url_for('dashboards') }}"><button>Dashboards</button></a>
+                                    <a href="{{ url_for('predictions') }}"><button>Predictions</button></a>
+                                </div>
+					</div>
+
+
+					<div class="footer">
+						Copyright &copy; 2023 &mdash; Inetum
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	
+	<script src="static/js/my-login.js"></script>
 </body>
 </html>
