--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Predictions</title>
-    <style>
-        body {
-            background-color: #32afd8; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        
+	<meta charset="utf-8">
+	<meta name="author" content="Kodinger">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title>Predictions Page</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="static/css/my-login.css">
+    <style>  
         .result-container {
             background-color: #FFFFFF; 
             padding: 20px;
@@ -19,7 +15,11 @@
             width: 400px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
             text-align: center;
-            margin-top: 20px; 
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 9999;
         }
         
         label {
@@ -37,53 +37,86 @@
             margin-bottom: 10px;
         }
         
-        button[type="submit"] {
-            background-color: #000080; 
-            color: #FFFFFF; 
-            padding: 15px 30px; 
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 18px; 
-            font-weight: bold;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
-            display: block; 
-            margin: 0 auto; 
-        }
     </style>
 </head>
-<body>
-    <form action="#" method="POST">
-        <label for="inter_api_access_duration">Inter API Access Duration (sec):</label>
-        <input type="number" id="inter_api_access_duration" name="inter_api_access_duration" required><br><br>
-        
-        <label for="sequence_length">Sequence Length (count):</label>
-        <input type="number" id="sequence_length" name="sequence_length" required><br><br>
-        
-        <label for="vsession_duration">VSession Duration (min):</label>
-        <input type="number" id="vsession_duration" name="vsession_duration" required><br><br>
-        
-        <label for="num_unique_apis">Number of Unique APIs:</label>
-        <input type="number" id="num_unique_apis" name="num_unique_apis" required><br><br>
-        
-        <label for="source">Source:</label>
-        <input type="number" id="source" name="source" required><br><br>
-        
-        <label for="statusCode">Status Code:</label>
-        <input type="number" id="statusCode" name="statusCode" required><br><br>
-        
-        <label for="auth_method">Authentication Method:</label>
-        <input type="number" id="auth_method" name="auth_method" required><br><br>
-        
-        <button type="submit">Predict Risk</button>
-    </form>
-    
-    {% if svm_prediction %}
-    <div class="result-container">
-        <h3>SVM Prediction:</h3>
-        <p>{{ svm_prediction[0] }}</p>
-    </div>
-    {% endif %}
-    
+
+<body class="my-login-page">
+	<section class="h-100">
+		<div class="container h-100">
+			<div class="row justify-content-md-center h-100">
+				<div class="card-wrapper">
+					<div class="card fat">
+						<h4 class="card-title">Predictions</h4>
+					</div>
+                    <br>
+					<div class="card fat">
+						<div class="card-body">
+							
+
+                            {% if svm_prediction in [0,1,2] %}
+                            <div class="alert alert-primary alert-dismissible fade show result-container" role="alert">
+                                <h3>SVM Prediction:</h3>
+                                {% if svm_prediction == 0 %}
+                                    <p>Low Risk</p>
+                                {% elif svm_prediction == 2 %}
+                                    <p>High Risk</p>
+                                {% else %}
+                                    <p>Moderate Risk</p>
+                                {% endif %}
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            {% endif %}
+
+							<form action="#" method="POST">
+                                <label for="inter_api_access_duration">Inter API Access Duration (sec):</label>
+                                <input type="text" id="inter_api_access_duration" name="inter_api_access_duration" required><br><br>
+                                
+                                <label for="sequence_length">Sequence Length (count):</label>
+                                <input type="text" id="sequence_length" name="sequence_length" required><br><br>
+                                
+                                <label for="vsession_duration">VSession Duration (min):</label>
+                                <input type="text" id="vsession_duration" name="vsession_duration" required><br><br>
+                                
+                                <label for="num_unique_apis">Number of Unique APIs:</label>
+                                <input type="number" id="num_unique_apis" name="num_unique_apis" required><br><br>
+                                
+                                <label for="source">Source:</label>
+                                <input type="number" id="source" name="source" required><br><br>
+                                
+                                <label for="statusCode">Status Code:</label>
+                                <input type="number" id="statusCode" name="statusCode" required><br><br>
+                                
+                                <label for="auth_method">Authentication Method:</label>
+                                <input type="number" id="auth_method" name="auth_method" required><br><br>
+                                
+                                <div class="form-group m-0">
+									<button type="submit" class="btn btn-primary btn-block">
+										Predict Risk
+									</button>
+								</div>
+                            </form>
+						</div>
+					</div>
+					<div class="footer">
+						&copy; 2023 &mdash; Inetum
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAgV2Zv8yXSbGP6I2c2uLc7cfdB4fV+T8BtSRqzZnFYVc0S7/Z8p8xV40ylQ" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script>
+    $(document).ready(function() {
+        $(".alert .close").click(function(){
+            $(this).closest(".alert").remove();
+        });
+    });
+</script>
+	<script src="static/js/my-login.js"></script>
 </body>
 </html>
